--- a/Assets/css/scss/global/_navigation.scss
+++ b/Assets/css/scss/global/_navigation.scss
@@ -20,6 +20,44 @@
 	background-color: #888;
 }
 
+button.navbar-toggle.collapsed {
+	background-color: transparent !important;
+}
+
+button.navbar-toggle {
+	position: relative;
+	
+	.icon-bar-1 { opacity: 1; transition: opacity 0.5s; }
+	.icon-bar-2 { opacity: 1; transition: opacity 0.5s; }
+	.icon-bar-3 { opacity: 1; transition: opacity 0.5s; }
+	.icon-bar-cross {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		margin: 0 !important;
+		transform: translate(-50%, -50%);
+		opacity: 0;
+		transition: transform 0.5s, opacity 0.5s;
+	}
+	
+	&:not(.collapsed) {
+		.icon-bar-1 { opacity: 0; }
+		.icon-bar-2 { opacity: 0; }
+		.icon-bar-3 { opacity: 0; }
+		.icon-bar-cross {
+			transition: transform 0.6s;
+			opacity: 1;
+			background-color: $theme-color-blue;
+		}
+		.icon-bar-cross-4 {
+			transform: translate(-50%, -50%) rotate(45deg);
+		}
+		.icon-bar-cross-5 {
+			transform: translate(-50%, -50%) rotate(-45deg);
+		}		
+	}
+}
+
 .navbar-brand {
 	padding: 5px;
 	padding-left: 25px;
